infra/k8s/dev/grafana-dashboard-provider-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: dev
  labels:
    app: grafana

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.3.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: grafana-agent-dashboard
              mountPath: /var/lib/grafana/dashboards/agent.json
              subPath: agent.json
              readOnly: true

            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards.yaml
              readOnly: true

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: grafana-agent-dashboard
          configMap:
            name: grafana-agent-dashboard

        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider
