infra/k8s/dev/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: dev
  labels:
    app: prometheus

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      securityContext:
        fsGroup: 65534

      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule

      containers:
        - name: prometheus
          image: prom/prometheus:v2.55.1
          imagePullPolicy: IfNotPresent

          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus

          ports:
            - containerPort: 9090

          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
              readOnly: true

            - name: prometheus-data
              mountPath: /prometheus

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config

        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-pvc
