infra/k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30300
      protocol: TCP
