infra/k8s/dev/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: dev
  labels:
    app: grafana

spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
