infra/k8s/dev/agent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
  namespace: dev
  labels:
    app: agent
spec:
  ingressClassName: nginx
  rules:
    - host: dev-agent.adan.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent
                port:
                  number: 8000
