infra/k8s/dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend

spec:
  ingressClassName: nginx

  rules:
    - host: dev.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
